public class PressePapier {
    private String content;

    public String get() {
        return content;
    }

    public void set(String text) {
        this.content = text;
    }
}
